fix for GUI log cards => overflow-x autor

--- a/elastest-torm-gui/src/app/shared/logs-view-text/logs-view-text.component.scss
+++ b/elastest-torm-gui/src/app/shared/logs-view-text/logs-view-text.component.scss
@@ -3,7 +3,7 @@
   height: 35vh;
   font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace;
   overflow-y: auto;
-  overflow-x: hidden;
+  overflow-x: auto;
   list-style: none;
   padding: 0px;
 
